--- a/JJavaJuliePro1/.gitignore
+++ b/JJavaJuliePro1/.gitignore
@@ -1,1 +1,7 @@
 /firstClass.class
+/EmployeeRolesID.class
+/Permission.class
+/Authorization.class
+/User.class
+/CreateUsers.class
+/CreateUserPermissions.class
